fixed header spacing

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -35,12 +35,13 @@ body {
 header {
   background-color: $light-grey;
   height: 5vh;
-  margin: 10px 0;
+  padding: 10px 0px 10px 0px;
   display:block;
+  vertical-align: middle;
 }
 
 header h1 {
-  padding: 0px 30px;
+  padding: 10px 30px;
   margin: 0;
   display:table-cell;
   @include style_font(2vw, $off-white);
